--- a/package.json
+++ b/package.json
@@ -4,8 +4,10 @@
   "description": "the Complete Intro to React, v5",
   "main": "src/App.js",
   "dependencies": {
+    "@babel/node": "^7.13.0",
     "@frontendmasters/pet": "^1.0.3",
     "@reach/router": "^1.2.1",
+    "express": "^4.17.1",
     "loadash": "^1.0.0",
     "moment": "^2.29.1",
     "react": "^16.8.4",
@@ -28,6 +30,8 @@
     "prettier": "^1.16.1"
   },
   "scripts": {
+    "build": "parcel build --public-url ./dist/ src/index.html",
+    "start": "npm run build && babel-node server/index.js",
     "clear-build-cache": "rm -rf .cache/ dist/",
     "dev": "parcel src/index.html",
     "dev:mock": "cross-env PET_MOCK=mock parcel src/index.html",
